# spoofwatch

./: .gitignore  CHANGELOG.md  NOTICE  README.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml
bench/: results.json  run_all.py
docs/: LIMITATIONS.md
examples/: run_demo.py
spoofwatch/: __init__.py  cli.py  detect.py  geo.py  jamming.py  records.py  spoofing.py  synth.py
tests/: test_detect.py  test_geo_bench_cli.py  test_records_synth.py
